# SFML-ImGui-CUDA-template-cmake

./: .gitmodules  CMakeLists.txt  Makefile  Readme.md  benchmark.md  config.h.in  imgui.ini
gpgpu/: kernal_vector_add.cu
src/: CMakeLists.txt  main.cpp
src/include/: AppExample.hpp
src/include/SFH/: App.hpp  Noncopyable.hpp  color.hpp  math.hpp  random.hpp  shape.hpp
src/kernal/: CMakeLists.txt
src/kernal/kernal/: vector_add.hpp
